# src/controllers/book.controller.ts
@@ -1,6 +1,9 @@
-import { Controller, Get, Route, Tags } from "tsoa";
+import { Controller, Get, Post, Body, Route, Tags, Path, Patch } from "tsoa";
 import { BookDTO } from "../dto/book.dto";
 import { bookService } from "../services/book.service";
+import { CustomError } from "../middlewares/errorHandler";
+import { Book } from "../models/book.model";
+import { toDto } from "../mapper/book.mapper";
 
 @Route("books")
 @Tags("Books")
@@ -9,4 +12,49 @@ export class BookController extends Controller {
   public async getAllBooks(): Promise<BookDTO[]> {
     return bookService.getAllBooks();
   }
+
+  // Récupère un livre par ID
+  @Get("{id}")
+  public async getBoodById(id: number): Promise<BookDTO> {
+    let book: Book | null = await bookService.getBookById(id);
+
+    if (book === null) {
+      let error: CustomError = new Error(`Book ${id} not found`);
+      error.status = 404;
+      throw error;
+    }
+
+    return toDto(book);
+  }
+
+  // Crée un nouveau livre
+  @Post("/")
+  public async createBook(@Body() requestBody: BookDTO): Promise<BookDTO> {
+    let { title, publishYear, author, isbn } = requestBody;
+    
+    if(author?.id === undefined) {
+      let error: CustomError = new Error("Author ID is required to create a book");
+      error.status = 400;
+      throw error;
+    }
+    return bookService.createBook(title, publishYear, author?.id, isbn)
+  }
+
+  // Met à jour un livre par ID
+  // @Patch("{id}")
+  // public async updateBook(
+  //   @Path() id: number,
+  //   @Body() requestBody: BookDTO
+  // ): Promise<BookDTO> {
+  //   const { title, publishYear, author, isbn } = requestBody;
+
+  //   let book = await bookService.updateBook(title, publishYear, author, isbn)
+  //   if (book === null) {
+  //     let error: CustomError = new Error("Book not found");
+  //     error.status = 404;
+  //     throw error;
+  //   } else {
+  //     return book;
+  //   }
+  // }
 }
